refactor: package name for clarity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "defi-crypto-website",
+	"name": "defi-crypto-landing-page",
 	"private": true,
 	"version": "1.0.5",
 	"type": "module",
