--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "defi-crypto-landing-page",
+	"name": "defi-crypto-website",
 	"private": true,
 	"version": "1.0.5",
 	"type": "module",
@@ -9,15 +9,15 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"axios": "^1.6.3",
+		"axios": "^1.6.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.12.0"
+		"react-icons": "^5.0.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.46",
+		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@vitejs/plugin-react": "^4.2.1",
-		"vite": "^5.0.10"
+		"vite": "^5.0.12"
 	}
 }
