--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "defi-crypto-website",
+	"name": "deficrypto-web-project",
 	"private": true,
 	"version": "1.0.5",
 	"type": "module",
@@ -19,5 +19,6 @@
 		"@types/react-dom": "^18.2.18",
 		"@vitejs/plugin-react": "^4.2.1",
 		"vite": "^5.0.12"
-	}
+	},
+	"packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
