--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
 	"name": "deficrypto-web-project",
 	"private": true,
-	"version": "1.0.5",
+	"version": "1.2.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy:app": "firebase deploy --only hosting"
 	},
 	"dependencies": {
 		"axios": "^1.7.9",
+		"firebase": "^11.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0"
