--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
-		"deploy:app": "firebase deploy --only hosting"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"axios": "^1.7.9",
-		"firebase": "^11.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0"
