--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/defi-crypto:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/deficrypto:latest
